# AP-Slave

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  PROMO_ANALYSIS_PLAYBOOK.md  PROMO_PLACEMENT_MONITORING_PLAYBOOK.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: validate.yml
SPORT_ADAPTERS/: ADAPTER_TEMPLATE.md  GOLF.md  NBA.md  NFL.md  README.md  WNBA.md  catalog.yaml  source_registry.yaml
docs/handoffs/: CODEX_NEXT_SESSION_HANDOFF.md  CURRENT_STATUS.md  PROJECT_CONTEXT.md
evidence/templates/: golf_event_source_pack.yaml  source_evidence_bundle.yaml
src/ap_slave_runtime/: __init__.py  cli.py  engine.py  models.py  render.py
src/ap_slave_validation/: __init__.py  __main__.py  models.py  schemas.py  validator.py
tests/: test_repository_validation.py
tests/runtime/: factories.py  test_engine.py  test_goldens.py  test_models.py
tests/runtime/fixtures/: mlb_valid.json  wnba_moneyline_valid.json
tests/runtime/goldens/: mlb_brief.json  mlb_brief.md  wnba_moneyline_brief.json  wnba_moneyline_brief.md
